--- a/Photonics_course_demo_ver2.ipynb
+++ b/Photonics_course_demo_ver2.ipynb
@@ -5,7 +5,7 @@
    "id": "24704a50",
    "metadata": {},
    "source": [
-    "# Notebook prepared for Photonics course, spring 2021. \n",
+    "# Notebook prepared for Photonics course, spring 2023. \n",
     "## Juha Muhonen"
    ]
   },
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "#Loading packages and setting some plotting parameters\n",
-    "%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "import qutip as qt\n",
     "import numpy as np\n",
     "import time\n",
